# 2_5D_game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  run-uts.yml
inc/: GameComponents.hpp  Resources.build.hpp  Resources.hpp  collision.hpp  game.h
inc/Common/: Level.hpp  Log.hpp  Wall.hpp
inc/Game/: GameComponents.hpp
inc/LevelEditor/: Draw.hpp  Input.hpp  State.hpp
inc/Renderer/: Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBufferLayout.hpp
src/: 25DGame.cpp  LevelEditor.cpp  Renderer.cpp  Resources.build.cpp  main.cpp
src/Game/: Collision.cpp  Game.cpp
src/Renderer/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/game/: collison.cpp  game.cpp
tst/: collison_detection_tests.cpp  example.cpp
